--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -1,6 +1,13 @@
 # src/AppBundle/Resources/translations/messages.ru.yml
 developers: Веб-агентство CHEERS! Unlimited
 
+meta:
+  title: Br.Asst. - Инструмент проверки и обновления вашего веб-браузера
+  description: >
+    С помощью Br.Asst. вы сможете узнать, не устарел ли ваш браузер и где найти обновление, а также скачать последние
+    версии наиболее популярных на сегодня браузеров и ознакомится со статистикой их использования. Для разработчиков и
+    вебмастеров Br.Asst. предлагает бесплатное и простое API, которое можно использовать на ваших веб-сайтах.
+
 locale:
   title: Языковые версии
   ua: На украинском
@@ -21,7 +28,7 @@ thanksgiving:
   text: >
     Выражаем благодарность замечательной
     <a href="http://piwik.org" class="sSize" target="_blank">Piwik Team</a> и их продукту
-    <a href="https://github.com/piwik/device-detector" class="sSize" target="_blank">Device Detector</a>, учасникам
+    <a href="https://github.com/piwik/device-detector" class="sSize" target="_blank">Device Detector</a>, участникам
     <a href="http://guzzle.readthedocs.org" class="sSize" target="_blank">проекта</a> PHP HTTP клиента
     <a href="https://github.com/guzzle/guzzle" class="sSize" target="_blank">Guzzle</a>, а также сообществу свободной энциклопедии
     <a href="https://www.wikipedia.org" class="sSize" target="_blank">Википедия</a> за их бескорыстный труд.
@@ -47,17 +54,17 @@ message:
     text: >
       Вы используете новейшую версию браузера
   explorer: >
-    <span>Ох...</span> Internet Explorer, хоть и по определенным причинам является популярным браузером, часто не позволяет
-    пользователям в полной мере оценить работу разработчиков сайтов. Этого можно и не делать, но в некоторых случаях мы
-    рекомендуем установить другой браузер, который, скорее всего, лучше справится с поставленными задачами и сделает
-    вашу работу и развлечения в сети более комфортными
+    <span>Ох...</span> Хотя браузер Internet Explorer и популярен по определенным причинам, он иногда не позволяет
+    пользователям оценить веб-сайты в полной мере. Этого можно и не делать, но в некоторый случаях мы рекомендуем
+    установить другой браузер, который сделает вашу работу и развлечения в сети более комфортными.
   your_version: Ваша версия
   latest_version: Последняя версия
 
 tooltip:
   uninstall_browser: >
     Настоятельно рекомендуем удалить старую версию браузера перед установкой новой, сохранив при этом ваши настройки
-    и данные о работе (большинство современных браузеров предлагают такую опцию)
+    и данные о работе (большинство современных браузеров предлагают такую опцию), либо же использовать встроенную функцию
+    обновления в самом браузере
   api_drag: >
     Выберите желаемый тип <span class="sSize">API</span> при помощи <span class="sSize">перемещения ползунка</span>
     в его сторону
@@ -105,7 +112,6 @@ content_api:
     проекты такими, какими они должны быть - присоединяйтесь!
   tooltip: Вправо или влево?
   guide:
-    title: Вы можете получить данные в удобном для себя формате
     html:
       title: Готовый <span class="sSize">HTML5</span>-виджет
       title_short: HTML-виджет
@@ -134,7 +140,7 @@ content_api:
       step:
         1: >
           Для того, чтобы получить ответ от Br.Asst. в формате JSON, необходимо сделать кросс-доменный GET-запрос по
-          адресу <code class="sSize">https://brasst.net.ua/api</code> c дополнительным GET-параметром
+          адресу <code class="sSize">https://brasst.net.ua/api</code> c дополнительным параметром
           <code class="sSize">'type=json'</code>:
         2: >
           Полученный объект будет иметь примерно следующий вид:
@@ -168,7 +174,7 @@ user_error_is_mobile: >
 user_error_not_browser: >
   Жаль, но определить ваш браузер не удалось, так как, скорее всего, ваш клиент - не веб-браузер
 
-nevermind_the_user_error: несмотря на это, мы надеемся, что вы еще сможете найти здесь что-нибудь интересное
+nevermind_the_user_error: в любом случае, мы надеемся, что вы еще сможете найти здесь что-нибудь интересное
 
 user_warning_unsupported_browser: >
   Жаль, но Br.Asst. пока поддерживает только основные браузеры,
