--- a/src/AppBundle/Resources/translations/messages.ua.yml
+++ b/src/AppBundle/Resources/translations/messages.ua.yml
@@ -1,6 +1,13 @@
 # src/AppBundle/Resources/translations/messages.ua.yml
 developers: Веб-агентство CHEERS! Unlimited
 
+meta:
+  title: Br.Asst. - Інструмент перевірки та оновлення вашого веб-браузеру
+  description: >
+    За допомогою Br.Asst. ви зможете дізнатися, чи не застарів ваш браузер та де знайти оновлення, а також скачати
+    останні версії найбільш популярних сьогодні браузерів та ознайомитися з статистикою їх використання. Для розробників
+    та веб-майстрів Br.Asst. пропонує безкоштовне та просте API, яке можна використовувати на ваших веб-сайтах.
+
 locale:
   title: Мовні версії
   ua: Українською
@@ -24,7 +31,7 @@ thanksgiving:
     <a href="https://github.com/piwik/device-detector" class="sSize" target="_blank">Device Detector</a>, учасникам
     <a href="http://guzzle.readthedocs.org" class="sSize" target="_blank">проекту</a> PHP HTTP клієнта
     <a href="https://github.com/guzzle/guzzle" class="sSize" target="_blank">Guzzle</a>, а також спільноті вільної енциклопедії
-    <a href="https://www.wikipedia.org" class="sSize" target="_blank">Вікіпедія</a> за за їх безкорисливу працю.
+    <a href="https://www.wikipedia.org" class="sSize" target="_blank">Вікіпедія</a> за їх безкорисливу працю.
 
 copyright: >
   © <a href='http://cheersunlimited.com.ua/%locale%' target="_blank">CHEERS! Unlimited</a>, 2015. Усі права збережені.
@@ -47,17 +54,17 @@ message:
     text: >
       Ви використовуєте найбільш нову версію браузеру
   explorer: >
-    <span>Ох...</span> Internet Explorer, хоч і з певних причин є популярним браузером, часто не дозволяє користувачам у повній
-    мірі оцінити роботу розробників сайтів. Цього можна і не робити, але в деяких випадках ми рекомендуємо встановити
-    інший браузер, який, скоріш за все, краще виконає поставлені задачі та зробить вашу роботу та розваги в мережі
-    більш комфортними
+    <span>Ох...</span> Хоча браузер Internet Explorer і є популярним з певних причин, він деколи не дозволяє
+    користувачам оцінити веб-сайти у повній мірі. Цього можна і не робити, але в деяких випадках ми радимо встановити
+    інший браузер, який зробить вашу роботу та розваги в мережі більш комфортними.
   your_version: Ваша версія
   latest_version: Остання версія
 
 tooltip:
   uninstall_browser: >
     Наполегливо радимо видалити стару версію браузеру перед встановленням нової, зберігши при цьому ваші налаштування
-    й дані про роботу (більшість сучасних браузерів пропонують таку опіцію)
+    й дані про роботу (більшість сучасних браузерів пропонують таку опцію), або ж використати вбудовану функцію
+    оновлення в самому браузері
   api_drag: >
     Оберіть бажаний тип <span class="sSize">API</span> за допомогою <span class="sSize">переміщення повзунка</span>
     в його сторону
@@ -105,7 +112,6 @@ content_api:
     такими, якими вони мають бути - приєднуйтесь!
   tooltip: Вправо чи вліво?
   guide:
-    title: Ви можете отримати дані в зручному для себе форматі
     html:
       title: Готовий <span class="sSize">HTML5</span>-віджет
       title_short: HTML-віджет
@@ -119,7 +125,7 @@ content_api:
           Підключіть файл скрипта перед закриваючим тегом <code class="sSize">&lt;/body&gt;</code> на сторінці, що має
           відображати віджет:
         2: >
-          Ініціалізуйте скрипт одразу після підключення. Додатково ви можете вказати необхідну вам мову, яку підтримуює
+          Ініціалізуйте скрипт одразу після підключення. Додатково ви можете вказати необхідну вам мову, яку підтримує
           Br.Asst., за допомогою параметра <code class="sSize">locale</code> у функції-конструкторі:
         final: >
           Готово!
@@ -134,7 +140,7 @@ content_api:
       step:
         1: >
           Для того, щоб отримати відповідь від Br.Asst. у форматі JSON, необхідно мати крос-доменний GET-запит за
-          адресою <code class="sSize">https://brasst.net.ua/api</code> з додатковим GET-параметром
+          адресою <code class="sSize">https://brasst.net.ua/api</code> з додатковим параметром
           <code class="sSize">'type=json'</code>:
         2: >
           Отриманий об'єкт буде мати приблизно наступний вигляд:
@@ -168,7 +174,7 @@ user_error_is_mobile: >
 user_error_not_browser: >
   Шкода, але визначити ваш браузер не вдалося, оскільки, скоріш за все, ваш клієнт - не веб-браузер
 
-nevermind_the_user_error: незважаючи на це, сподіваємось, що ви ще зможете знайти тут щось цікаве
+nevermind_the_user_error: в будь-якому разі, сподіваємось, що ви ще зможете знайти тут щось цікаве
 
 user_warning_unsupported_browser: >
   Шкода, але поки що Br.Asst. підтримує тільки основні браузери,
