--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -1,6 +1,13 @@
 # src/AppBundle/Resources/translations/messages.en.yml
 developers: CHEERS! Unlimited Web Agency
 
+meta:
+  title: Br.Asst. - A tool to check and update your web browser
+  description: >
+    With Br.Asst. you can find out whether your browser is outdated and where to find an update. Also, you can download
+    the latest versions on most popular browsers and see their usage statistics. For developers and webmasters Br.Asst.
+    provides free and simple API, which you can use for your own websites.
+
 locale:
   title: Language versions
   ua: Ukrainian
@@ -29,7 +36,7 @@ thanksgiving:
 
 copyright: >
   © <a href='http://cheersunlimited.com.ua/%locale%' target="_blank">CHEERS! Unlimited</a>, 2015. All rights reserved.
-  Usage of the website personal materials without authors' permission is prohibited.
+  Usage of the website personal materials without author's permission is prohibited.
 
 adjective:
   from: from
@@ -47,16 +54,16 @@ message:
     text: >
       You are using the latest browser version available
   explorer: >
-    <span>Oh...</span> Internet Explorer, though for some reasons really is a popular browser, often cannot deliver to the users
-    everything that website developers want them to see. As a rule of thumb, in some cases we recommend installing
-    another browser, which could perform better to make your web surfing more comfortable and satisfying.
+    <span>Oh...</span> Internet Explorer, though for some reasons really is a popular browser, it often cannot deliver
+    to the users great website experience. As a rule of thumb, in some cases we recommend installing another browser
+    which could perform better to make your web surfing more comfortable and satisfying.
   your_version: Your version
   latest_version: Latest version
 
 tooltip:
   uninstall_browser: >
-    We strongly recommend that you remove the old version before installing the new one, but don't forget to save your
-    browsing data first (most of the modern browsers do offer such option)
+    We strongly recommend that you remove the old version before installing the new one while keeping your settings and
+    browsing data (most of the modern browsers do offer such option), or just use your browser's built-in updater
   api_drag: >
     Choose desired <span class="sSize">API</span> type by <span class="sSize">dragging the slider</span> in its
     direction
@@ -71,15 +78,15 @@ content_idea:
     Why do you need <span class="sSize">Br.Asst.</span>?
   text: >
     Despite the fact that browser nowadays learned to update themselves without bothering users,
-    %accent_opening%older%accent_closing% version of such software still in use by many people. As a result, for
+    %accent_opening%older%accent_closing% version of such software are still in use by many people. As a result, for
     %accent_opening%old browser versions owners%accent_closing% websites and systems may perform and look
-    %accent_opening%differently%accent_closing% then it was %accent_opening%intended%accent_closing% by it's developers.
-    Do not spoil your impression - just always use the %accent_opening%latest%accent_closing% browsers versions
+    %accent_opening%differently%accent_closing% then it was %accent_opening%intended%accent_closing% by its developers.
+    Do not spoil your impression - simply always use the %accent_opening%latest%accent_closing% browser version!
   about: >
     We, the <a href="http://cheersunlimited.com.ua/%locale%" target="_blank">CHEERS! Unlimited</a> web-agency,
     developed %accent_opening%Br.Asst.%accent_closing% to take care of our customers and users. Br.Asst. will
-    %accent_opening%help you%accent_closing% to find out whether your browser is outdated and show you where you can
-    %accent_opening%get latest%accent_closing% version of today's most popular ones.
+    %accent_opening%help you%accent_closing% to find out whether your browser is outdated and show you where to
+    get the %accent_opening%latest%accent_closing% version of today's most popular ones.
   download_browser: Download browsers
 
 browser:
@@ -100,16 +107,15 @@ content_api:
   title: You can use <span class="sSize">Br.Asst.</span> for your own websites!
   text: >
     We provide free and simple API for developers and webmasters. If you wish your users to be always aware of their
-    browser version and could easily update it to see your project the way they should be - join up!
+    browser version and could easily update it to see your projects the way they should be - join up!
   tooltip: Right or left?
   guide:
-    title: You can get data type you need
     html:
       title: Out of the box <span class="sSize">HTML5</span> widget
       title_short: HTML widget
       text: >
         With provided %jsLink% and simplest integration you will get neutrally styled widget, ready to be embedded
-        on any of your website page. If the users browser version is outdated, the widget will show itself to propose
+        on any of your website page. If the user’s browser version is outdated, the widget will show itself to propose
         an update. Don't be afraid to seem intrusive: if user declines once, he will see the widget no longer
       step:
         1: >
@@ -125,13 +131,13 @@ content_api:
       title_short: Data in JSON
       text: >
         You can get only the necessary data to use it as you see fit. Object will contain information gathered from
-        client's User-Agent, as well as the client browser version and boolean value that shows whether it's outdated
-        or up to date. In case if browser is not detected or unsopported on user's operating system, we'll additionaly
-        send a warning strind identifier
+        client's User-Agent, as well as the client browser version and Boolean value that shows whether it's outdated
+        or up to date. In case if browser is not detected or is not supported on user's operating system, we'll additionally
+        send a warning string identifier
       step:
         1: >
           In order to get the response from Br.Asst. in JSON format you'll have to make a CORS GET request at
-          <code class="sSize">https://brasst.net.ua/api</code> with additional GET parameter
+          <code class="sSize">https://brasst.net.ua/api</code> with additional parameter
           <code class="sSize">'type=json'</code>:
         2: >
           Received object will look similar to this:
@@ -165,11 +171,11 @@ user_error_is_mobile: >
 user_error_not_browser: >
   Unfortunately it was not possible to detect your browser, because it looks like your client is not a web browser
 
-nevermind_the_user_error: despite that, we hope that you can still find here something interesting
+nevermind_the_user_error: anyway, we hope that you can still find here something interesting
 
 user_warning_unsupported_browser: >
   Unfortunately Br.Asst. is supporting only major browsers for now,
   and it can't tell anything about latest version of yours, or offer an update
 user_warning_unsupported_os: >
   The browser you're using is not officially supported by your operating system.
-  Why do you need a program which is abandoned by it's own developers? It's time to download and install another browser!
+  Why do you need a program which is abandoned by its own developers? It's time to download and install another browser!
