Renew, CHEERS identity

--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -35,7 +35,7 @@ thanksgiving:
     encyclopedia, for their selfless service.
 
 copyright: >
-  © <a href='http://cheersunlimited.com.ua/%locale%' target="_blank">CHEERS! Unlimited</a>, 2015. All rights reserved.
+  © <a href='http://cheersunlimited.com.ua/%locale%' target="_blank">CHEERS - Unlimited Web Production</a>, 2015 - %current_year%. All rights reserved.
   Usage of the website personal materials without author's permission is prohibited.
 
 adjective:
