--- a/src/AppBundle/Resources/translations/messages.ua.yml
+++ b/src/AppBundle/Resources/translations/messages.ua.yml
@@ -34,7 +34,7 @@ thanksgiving:
     <a href="https://www.wikipedia.org" class="sSize" target="_blank">Вікіпедія</a> за їх безкорисливу працю.
 
 copyright: >
-  © <a href='http://cheersunlimited.com.ua/%locale%' target="_blank">CHEERS! Unlimited</a>, 2015. Усі права збережені.
+  © <a href='http://cheersunlimited.com.ua/%locale%' target="_blank">CHEERS - Unlimited Web Production</a>, 2015 - %current_year%. Усі права збережені.
   Використання власних матеріалів сайту без згоди його авторів заборонено.
 
 adjective:
