--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -34,7 +34,7 @@ thanksgiving:
     <a href="https://www.wikipedia.org" class="sSize" target="_blank">Википедия</a> за их бескорыстный труд.
 
 copyright: >
-  © <a href='http://cheersunlimited.com.ua/%locale%' target="_blank">CHEERS! Unlimited</a>, 2015. Все права сохранены.
+  © <a href='http://cheersunlimited.com.ua/%locale%' target="_blank">CHEERS - Unlimited Web Production</a>, 2015 - %current_year%. Все права сохранены.
   Использование собственных материалов сайта без согласия его авторов запрещено.
 
 adjective:
